<resources>
    <string name="app_name">Event Plus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_location">My Location</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="err_msg_name">Tên đăng nhập phải dài hơn 6 kí tự</string>
    <string name="err_msg_password">Vui lòng nhập mật khẩu</string>
    <string name="err_msg_password6">Mật khẩu phải dài hơn 6 kí tự</string>
    <string name="err_msg_passwordag">Mật khẩu không khớp</string>
    <string name="err_msg_email">Email sai</string>
    <string name="question">Click vào đây để tạo tài khoản</string>
    <string name="noidung">Nội dung:</string>
    <string name="textChude">Chủ đề: </string>
    <string name="textSonguoi">Số người: </string>
    <string name="textSonguoithamdu">Số người tham gia: </string>
    <string name="textDonvi">Đơn vị: </string>
    <string name="textThoigian">Thời gian: </string>
    <string name="textDiadiem">Địa điểm: </string>
    <string name="textSdt">SĐT: </string>
    <string name="hoithao">Hội thảo và Đào tạo</string>
    <string name="vanhoa">Văn hóa và Giải trí</string>
    <string name="hoicho">Hội chợ và Triển lãm</string>
    <string name="thethao">Thể thao và Du lịch</string>
    <string name="khaitruong">Khai trương và Khuyến mãi</string>
    <string name="skkhac">Sự kiện khác</string>
    <string name="dangki">Đăng kí</string>
    <string name="timkiem">Tìm Kiếm</string>

    <string-array name="diadiem">
        <item>Khu Vực</item>
        <item>Hà Nội</item>
        <item>Tp Hồ Chí Minh</item>
        <item>Đà Nẵng</item>
        <item>Khu Vực Khác</item>

    </string-array>
    <string-array name="thoigian">
        <item>Thời Gian</item>
        <item>7 Ngày Tới</item>
        <item>1 Tháng Tới</item>
        <item>Tất Cả</item>

    </string-array>
    <string-array name="danhmuc">
        <item>Danh Mục</item>
        <item>Hội thảo, Đ.Tạo</item>
        <item>Văn hóa, G.Trí</item>
        <item>Hội chợ, T.Lãm</item>
        <item>Thể thao, D.Lich</item>
        <item>Khai trương, KM</item>
        <item>Sự kiện khác</item>

    </string-array>
</resources>