<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:cropToPadding="true"
            android:src="@drawable/tin" />

        <LinearLayout
            android:id="@+id/layoutct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtTieude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="THƯ NGỎ VUI TẾT SUM VẦY"
                android:textSize="16dp"
                android:textColor="@color/red"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textChude"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:text="@string/textSonguoi"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:text="@string/textDonvi"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:text="@string/textThoigian"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:text="@string/textDiadiem"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:text="@string/textSdt"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtdanhmuc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Hoạt động xã hội"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/txtSokhach"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Số khách"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/txtDonvi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Donvi"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/txtthoigan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Từ 7:00 - 23:00, Ngày 22/01/2016"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/txtDiadiem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Khoa nhi, Viện k3"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/txtSdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="123213123"
                        android:textSize="14dp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:textColor="@color/colorFontWhite"
                android:theme="@style/MyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Đăng kí tham dự" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noidung"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/txtNoidungchitet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>